[package]
name = "iledcolor-rs"
version = "1.0.0"
authors = ["AlexBMJ <dev@alexbmj.com>"]
edition = "2024"

[dependencies]
bluest = { version = "0.6.9", features = ["serde", "unstable"] }
clap = { version = "4.5.53", features = ["derive", "cargo"] }
crc = "3.4.0"
env_logger = "0.11.8"
image = "0.25.9"
log = "0.4.29"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
